# Methuselah

./: .env.example  .eslintrc.json  .gitignore  LICENSE  README.md  babel.config.js  babel.config.temp.js  cypress.config.cjs  dataset.jsonl  env.example  jest.config.cjs  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
backend/: .env.example  ingest.js  package-lock.json  package.json  qaTestOutput.json  server.js
backend/config/: pyproject.toml
backend/middleware/: auth.js  authMiddleware.js  logger.js
backend/models/: Conversation.js  DataChunks.js  Feedback.js  Goal.js  HealthMetric.js  HealthMetricHistory.js  Message.js  User.js  UserFile.js
backend/python/: main.py
backend/routes/: adminServer.js  authCodes.js  authRoutes.js  checkAuth.js  conversationalChat.js  conversations.js  directChat.js  feedback.js  healthMetrics.js  healthMetricsInsights.js  ragChat.js  ragSearch.js  userChatHist.js  userData.js  userFile.js  userLogin.js  userLogout.js  userProfile.js  userRegister.js  userSettings.js
backend/scripts/: chunkAndIngest.js  gemTestQAGen.js  generateQAPairs.js  personalizedQAGen.js  runIngest.js  testQAGen.js
backend/tests/: calculatePace.test.js
backend/utils/: calculatePace.js  extractTextFromFile.js  mailer.js  resetCodes.js  summariseAndEmbed.js
cypress/e2e/: adminuploads.cy.js  (+8 more)
mongoScripts/: addGender.mongodb  addHealthFields.mongodb  addNumsAndAgrmt.mongodb  addRoles.mongodb  removeDuplicateData.mongodb  removeDuplicateSourceData.mongodb  updateNames.mongodb
scripts/: generateQAPairs.js  testQAGen.js
(+66 files in other folders)
